--- a/.pylintrc
+++ b/.pylintrc
@@ -10,6 +10,7 @@ disable=invalid-name,
 	too-many-lines,
 	too-many-statements,
 	too-few-public-methods,
+	too-many-public-methods,
 	logging-too-many-args,
 	duplicate-code,
 	import-error,
