--- a/custom_components/ccei_tild/manifest.json
+++ b/custom_components/ccei_tild/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "ccei_tild",
   "name": "CCEI Tild",
-  "iot_class": "local_polling",
-  "version": "0.1.0",
-  "documentation": "https://github.com/brenard/ccei-tild-custom-component",
-  "dependencies": [],
-  "config_flow": true,
-  "issue_tracker": "https://github.com/brenard/ccei-tild-custom-component/issues",
   "codeowners": ["@brenard"],
-  "requirements": []
+  "config_flow": true,
+  "dependencies": [],
+  "documentation": "https://github.com/brenard/ccei-tild-custom-component",
+  "iot_class": "local_polling",
+  "issue_tracker": "https://github.com/brenard/ccei-tild-custom-component/issues",
+  "requirements": [],
+  "version": "0.1.0"
 }
